--- a/src/app/sensor/sensorvalue/sensorvalue.module.scss
+++ b/src/app/sensor/sensorvalue/sensorvalue.module.scss
@@ -20,6 +20,14 @@
     margin-top: 20px;
     align-items: center;
   }
+
+  > .sensor-date {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+  }
 }
 
 
