--- a/src/app/controller/controller.module.scss
+++ b/src/app/controller/controller.module.scss
@@ -1,16 +1,20 @@
-.Controller {
+.controller {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   margin-top: 20px;
-}
 
-.ControllerContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  > .controller-home-info {
+    margin-top: 10px;
+  }
+
+  > .controller-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
