--- a/src/app/sensor/sensor.module.scss
+++ b/src/app/sensor/sensor.module.scss
@@ -5,12 +5,16 @@
   justify-content: flex-start;
   margin-top: 20px;
 
+  > .sensor-home-info {
+    margin-top: 10px;
+  }
+
   > .sensor {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
 
     > .sensor-features-container {
