--- a/src/app/homes/homes.module.scss
+++ b/src/app/homes/homes.module.scss
@@ -1,17 +1,14 @@
 .homes {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 
   > .homes-container {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+    align-items: stretch;
+    margin-top: 40px;
   }
 }
 
