feat: replace flex layout with grid layout in Devices page
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/src/app/devices/devices.module.scss
+++ b/src/app/devices/devices.module.scss
@@ -1,52 +1,20 @@
 .devices-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin-top: 20px;
-  margin-bottom: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin: 20px 40px 40px;
 
   .home-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-    flex-wrap: wrap;
     margin-top: 40px;
     margin-bottom: 0;
 
-    //.card {
-    //  background-color: dodgerblue;
-    //  color: white;
-    //  padding: 1rem;
-    //  height: 4rem;
-    //}
-    //
-    //.cards {
-    //  max-width: 1200px;
-    //  margin: 0 auto;
-    //  display: grid;
-    //  gap: 1rem;
-    //  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    //}
-
     .features-container {
-      display: card;
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: space-around;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-gap: 10px;
+      align-items: stretch;
+      margin-top: 20px;
     }
 
     .room-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: space-around;
-      flex-wrap: wrap;
+      margin-top: 20px;
     }
   }
 }
